tests/ui/threads-sendsync.stderr
error[E0277]: `dyn futures_async_stream::__private::stream::Stream<Item = i32>` cannot be sent between threads safely
  --> tests/ui/threads-sendsync.rs:27:17
   |
27 |     assert_send(boxed_local()); //~ ERROR `dyn futures_core::stream::Stream<Item = i32>` cannot be sent between threads safely
   |     ----------- ^^^^^^^^^^^^^ `dyn futures_async_stream::__private::stream::Stream<Item = i32>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `dyn futures_async_stream::__private::stream::Stream<Item = i32>`
   = note: required because of the requirements on the impl of `Send` for `Unique<dyn futures_async_stream::__private::stream::Stream<Item = i32>>`
   = note: required because it appears within the type `Box<dyn futures_async_stream::__private::stream::Stream<Item = i32>>`
   = note: required because it appears within the type `Pin<Box<dyn futures_async_stream::__private::stream::Stream<Item = i32>>>`
note: required by a bound in `assert_send`
  --> tests/ui/threads-sendsync.rs:5:19
   |
5  | fn assert_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `assert_send`
